added twitter widget

--- a/dashboards/test.erb
+++ b/dashboards/test.erb
@@ -1,16 +1,25 @@
+<script type='text/javascript'>
+ $(function() {
+   Dashing.gridsterLayout('[{"col":1,"row":1,"size_x":3,"size_y":1},{"col":4,"row":1,"size_x":1,"size_y":1},{"col":1,"row":2,"size_x":1,"size_y":1},{"col":2,"row":2,"size_x":1,"size_y":1},{"col":3,"row":2,"size_x":2,"size_y":1}]')
+ });
+ </script>
 <div class="gridster">
   <ul>
-    <li data-row="3" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="response_time1" data-view="Alert" data-title="Response Time App1" data-addclass-danger="isTooHigh"></div> <!-- the class is named "danger" -->
-    </li>
-    <li data-row="2" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="response_time2" data-view="Alert" data-title="Response Time App2" data-addclass-danger="isTooHigh"></div> <!-- the class is named "danger" -->
-    </li>
-    <li data-row="2" data-col="2" data-sizex="1" data-sizey="1">
-      <div data-id="valuation" data-view="Number" data-title="Current Valuation" data-moreinfo="In billions" data-prefix="$"></div>
-    </li>
     <li data-row="1" data-col="1" data-sizex="3" data-sizey="1">
       <div data-id="current_clock" data-view="Clock" data-title="Current Clock" data-moreinfo="some text" data-prefix="$"></div>
+    </li>
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="up_time" data-view="Alert" data-title="server up time" data-moreinfo="in minutes"></div>
+    </li>
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="response_time2" data-view="Alert" data-title="Response Time App2" data-addclass-danger="isTooHigh"></div> <!-- the class is named "danger" -->
+    </li>
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="valuation" data-view="Number" data-title="Current Valuation" data-moreinfo="In billions" data-prefix="$"></div>
+    </li>
+    <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
+      <div data-id="twitter_mentions" data-view="Comments" style="background-color:#00acee;" data-moreinfo="tweets tagged with #javascript"></div>
+      <i class="fa fa-twitter icon-background"></i>
     </li>
   </ul>
 </div>
