added welcome widget and authentication

--- a/dashboards/test.erb
+++ b/dashboards/test.erb
@@ -1,6 +1,6 @@
 <script type='text/javascript'>
  $(function() {
-   Dashing.gridsterLayout('[{"col":1,"row":1,"size_x":3,"size_y":1},{"col":4,"row":1,"size_x":1,"size_y":1},{"col":1,"row":2,"size_x":1,"size_y":1},{"col":2,"row":2,"size_x":1,"size_y":1},{"col":3,"row":2,"size_x":2,"size_y":1}]')
+   Dashing.gridsterLayout('[{"col":1,"row":1,"size_x":3,"size_y":1},{"col":2,"row":2,"size_x":1,"size_y":1},{"col":1,"row":2,"size_x":1,"size_y":1},{"col":4,"row":1,"size_x":1,"size_y":1},{"col":3,"row":2,"size_x":2,"size_y":1}]')
  });
  </script>
 <div class="gridster">
@@ -12,10 +12,10 @@
       <div data-id="up_time" data-view="Alert" data-title="server up time" data-moreinfo="in minutes"></div>
     </li>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="response_time2" data-view="Alert" data-title="Response Time App2" data-addclass-danger="isTooHigh"></div> <!-- the class is named "danger" -->
+      <div data-id="response_time" data-view="Alert" data-title="Response Time App" data-addclass-danger="isTooHigh"></div> <!-- the class is named "danger" -->
     </li>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="valuation" data-view="Number" data-title="Current Valuation" data-moreinfo="In billions" data-prefix="$"></div>
+      <div data-id="welcome" data-view="Welcome" data-title="Welcome" data-text="You are logged in as" data-userinfo="xyz"></div>
     </li>
     <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
       <div data-id="twitter_mentions" data-view="Comments" style="background-color:#00acee;" data-moreinfo="tweets tagged with #javascript"></div>
