added logout feature

--- a/dashboards/test.erb
+++ b/dashboards/test.erb
@@ -12,7 +12,7 @@
       <div data-id="up_time" data-view="Alert" data-title="server up time" data-moreinfo="in minutes"></div>
     </li>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="response_time" data-view="Alert" data-title="Response Time App" data-addclass-danger="isTooHigh"></div> <!-- the class is named "danger" -->
+      <div data-id="response_time" data-view="Alert" data-title="Response Time" data-addclass-danger="isTooHigh"></div> <!-- the class is named "danger" -->
     </li>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="welcome" data-view="Welcome" data-title="Welcome" data-text="You are logged in as" data-userinfo="xyz"></div>
